force-app/objects/Account/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested to Customer</fullName>
            </value>
            <value>
                <fullName>Authorized by Customer</fullName>
            </value>
            <value>
                <fullName>Submitted to TaxStatus</fullName>
            </value>
            <value>
                <fullName>Processing by TaxStatus</fullName>
            </value>
            <value>
                <fullName>Approved by IRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>