force-app/objects/Account/fields/TIN_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>TIN_Verification_Date__c</fullName>
    <label>TIN Verification Date</label>
    <type>Date</type>
</CustomField>