force-app/objects/Account/fields/TIN_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>TIN_Verification_Status__c</fullName>
    <description>Tax Status</description>
    <label>TIN Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>